--- a/swipe.html
+++ b/swipe.html
@@ -23,7 +23,7 @@ html, body {
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
   -webkit-overflow-scrolling: touch;
-  padding: 0 35vw; /* 👈 creates side peek */
+  padding: 0 35vw;
 }
 
 /* CARD */
@@ -34,13 +34,81 @@ html, body {
   background: #151515;
   border-radius: 18px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: #fff;
-  font-size: 1.4rem;
-  letter-spacing: 0.08em;
-  user-select: none;
   scroll-snap-align: center;
+  color: #fff;
+}
+
+/* DAY */
+.day {
+  font-size: 0.9rem;
+  letter-spacing: 0.14em;
+  opacity: 0.7;
+  margin-bottom: 10px;
+}
+
+/* MONEY */
+.money {
+  display: flex;
+  align-items: center;
+  font-size: 1.6rem;
+}
+
+/* SLOT */
+.slot {
+  width: 22px;
+  height: 30px;
+  overflow: hidden;
+  margin-left: 4px;
+  position: relative;
+}
+
+/* REEL */
+.reel {
+  position: absolute;
+  top: 0;
+  animation: spin 10s linear infinite;
+}
+
+/* DIGITS */
+.reel div {
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* STOPPED STATE */
+.slot.filled .reel {
+  animation: none;
+  transform: translateY(0);
+}
+
+/* SPIN */
+@keyframes spin {
+  from { transform: translateY(0); }
+  to   { transform: translateY(-300px); }
+}
+
+/* FOOTER NUMBERS */
+.footer {
+  position: fixed;
+  bottom: 18px;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  gap: 18px;
+  font-size: 1rem;
+  letter-spacing: 0.3em;
+  color: rgba(255,255,255,0.6);
+}
+
+.footer span {
+  cursor: pointer;
+  user-select: none;
 }
 </style>
 </head>
@@ -48,38 +116,88 @@ html, body {
 <body>
 
 <div class="scroller" id="scroller">
-  <!-- clone Sunday -->
-  <div class="card">Sunday</div>
 
-  <div class="card">Monday</div>
-  <div class="card">Tuesday</div>
-  <div class="card">Wednesday</div>
-  <div class="card">Thursday</div>
-  <div class="card">Friday</div>
-  <div class="card">Saturday</div>
-  <div class="card">Sunday</div>
+  <!-- clone Sunday -->
+  <div class="card">
+    <div class="day">Sunday</div>
+    <div class="money">$ 
+      <div class="slot"><div class="reel"></div></div>
+      <div class="slot"><div class="reel"></div></div>
+      <div class="slot"><div class="reel"></div></div>
+    </div>
+  </div>
+
+  <!-- days -->
+  <div class="card"><div class="day">Monday</div><div class="money">$ <div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div></div></div>
+  <div class="card"><div class="day">Tuesday</div><div class="money">$ <div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div></div></div>
+  <div class="card"><div class="day">Wednesday</div><div class="money">$ <div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div></div></div>
+  <div class="card"><div class="day">Thursday</div><div class="money">$ <div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div></div></div>
+  <div class="card"><div class="day">Friday</div><div class="money">$ <div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div></div></div>
+  <div class="card"><div class="day">Saturday</div><div class="money">$ <div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div></div></div>
+  <div class="card"><div class="day">Sunday</div><div class="money">$ <div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div></div></div>
 
   <!-- clone Monday -->
-  <div class="card">Monday</div>
+  <div class="card">
+    <div class="day">Monday</div>
+    <div class="money">$ 
+      <div class="slot"><div class="reel"></div></div>
+      <div class="slot"><div class="reel"></div></div>
+      <div class="slot"><div class="reel"></div></div>
+    </div>
+  </div>
+
+</div>
+
+<!-- footer numbers -->
+<div class="footer" id="footer">
+  <span>0</span><span>1</span><span>2</span><span>3</span><span>4</span>
+  <span>5</span><span>6</span><span>7</span><span>8</span><span>9</span>
 </div>
 
 <script>
 const scroller = document.getElementById("scroller");
-
-// card width + margin (180 + 28)
 const cardStep = 208;
-
-// start centered on Monday
 scroller.scrollLeft = cardStep;
 
 // infinite loop
 scroller.addEventListener("scroll", () => {
-  if (scroller.scrollLeft <= 0) {
-    scroller.scrollLeft = cardStep * 7;
+  if (scroller.scrollLeft <= 0) scroller.scrollLeft = cardStep * 7;
+  if (scroller.scrollLeft >= cardStep * 8) scroller.scrollLeft = cardStep;
+});
+
+// populate reels
+document.querySelectorAll(".reel").forEach(reel => {
+  for (let i = 0; i <= 9; i++) {
+    const d = document.createElement("div");
+    d.textContent = i;
+    reel.appendChild(d);
   }
-  if (scroller.scrollLeft >= cardStep * 8) {
-    scroller.scrollLeft = cardStep;
-  }
+});
+
+// slot fill logic
+let slotIndex = 0;
+
+document.getElementById("footer").addEventListener("click", e => {
+  if (!e.target.matches("span")) return;
+
+  const digit = e.target.textContent;
+
+  // find centered card
+  const cards = [...document.querySelectorAll(".card")];
+  const centerX = window.innerWidth / 2;
+  let activeCard = cards.reduce((a, b) => {
+    return Math.abs(b.getBoundingClientRect().left + 90 - centerX) <
+           Math.abs(a.getBoundingClientRect().left + 90 - centerX) ? b : a;
+  });
+
+  const slots = activeCard.querySelectorAll(".slot");
+  const slot = slots[slotIndex];
+
+  // fill slot
+  slot.classList.add("filled");
+  slot.querySelector(".reel").innerHTML = `<div>${digit}</div>`;
+
+  slotIndex = (slotIndex + 1) % 3;
 });
 </script>
 
