--- a/swipe.html
+++ b/swipe.html
@@ -39,17 +39,17 @@ html, body {
   justify-content: center;
   scroll-snap-align: center;
   color: #fff;
+  user-select: none;
 }
 
-/* DAY */
+/* DAY TEXT — back to the clean one */
 .day {
-  font-size: 0.9rem;
-  letter-spacing: 0.14em;
-  opacity: 0.7;
-  margin-bottom: 10px;
+  font-size: 1.4rem;
+  letter-spacing: 0.08em;
+  margin-bottom: 12px;
 }
 
-/* MONEY */
+/* MONEY ROW */
 .money {
   display: flex;
   align-items: center;
@@ -69,10 +69,10 @@ html, body {
 .reel {
   position: absolute;
   top: 0;
-  animation: spin 10s linear infinite;
+  animation: spin 12s linear infinite;
 }
 
-/* DIGITS */
+/* DIGIT */
 .reel div {
   height: 30px;
   display: flex;
@@ -80,35 +80,10 @@ html, body {
   justify-content: center;
 }
 
-/* STOPPED STATE */
-.slot.filled .reel {
-  animation: none;
-  transform: translateY(0);
-}
-
-/* SPIN */
+/* slow continuous spin */
 @keyframes spin {
-  from { transform: translateY(0); }
-  to   { transform: translateY(-300px); }
-}
-
-/* FOOTER NUMBERS */
-.footer {
-  position: fixed;
-  bottom: 18px;
-  left: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  gap: 18px;
-  font-size: 1rem;
-  letter-spacing: 0.3em;
-  color: rgba(255,255,255,0.6);
-}
-
-.footer span {
-  cursor: pointer;
-  user-select: none;
+  from { transform: translateY(var(--start)); }
+  to   { transform: translateY(calc(var(--start) - 300px)); }
 }
 </style>
 </head>
@@ -127,7 +102,6 @@ html, body {
     </div>
   </div>
 
-  <!-- days -->
   <div class="card"><div class="day">Monday</div><div class="money">$ <div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div></div></div>
   <div class="card"><div class="day">Tuesday</div><div class="money">$ <div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div></div></div>
   <div class="card"><div class="day">Wednesday</div><div class="money">$ <div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div><div class="slot"><div class="reel"></div></div></div></div>
@@ -148,15 +122,11 @@ html, body {
 
 </div>
 
-<!-- footer numbers -->
-<div class="footer" id="footer">
-  <span>0</span><span>1</span><span>2</span><span>3</span><span>4</span>
-  <span>5</span><span>6</span><span>7</span><span>8</span><span>9</span>
-</div>
-
 <script>
 const scroller = document.getElementById("scroller");
 const cardStep = 208;
+
+// start on Monday
 scroller.scrollLeft = cardStep;
 
 // infinite loop
@@ -165,39 +135,22 @@ scroller.addEventListener("scroll", () => {
   if (scroller.scrollLeft >= cardStep * 8) scroller.scrollLeft = cardStep;
 });
 
-// populate reels
+// populate reels + randomize start
 document.querySelectorAll(".reel").forEach(reel => {
   for (let i = 0; i <= 9; i++) {
     const d = document.createElement("div");
     d.textContent = i;
     reel.appendChild(d);
   }
-});
+  for (let i = 0; i <= 9; i++) {
+    const d = document.createElement("div");
+    d.textContent = i;
+    reel.appendChild(d);
+  }
 
-// slot fill logic
-let slotIndex = 0;
-
-document.getElementById("footer").addEventListener("click", e => {
-  if (!e.target.matches("span")) return;
-
-  const digit = e.target.textContent;
-
-  // find centered card
-  const cards = [...document.querySelectorAll(".card")];
-  const centerX = window.innerWidth / 2;
-  let activeCard = cards.reduce((a, b) => {
-    return Math.abs(b.getBoundingClientRect().left + 90 - centerX) <
-           Math.abs(a.getBoundingClientRect().left + 90 - centerX) ? b : a;
-  });
-
-  const slots = activeCard.querySelectorAll(".slot");
-  const slot = slots[slotIndex];
-
-  // fill slot
-  slot.classList.add("filled");
-  slot.querySelector(".reel").innerHTML = `<div>${digit}</div>`;
-
-  slotIndex = (slotIndex + 1) % 3;
+  // random starting offset (desync)
+  const offset = Math.floor(Math.random() * 10) * 30;
+  reel.style.setProperty("--start", `-${offset}px`);
 });
 </script>
 
